  in your code, you can replace it with public GetWindowBorderSize().

- Microsoft Visual Studio 2003 (a.k.a. MSVC 7) is not supported any longer, the
  minimum required version is now 2005.


3.2.4: (released 2024-??-??)
----------------------------

wxMSW:

- Fix MSVS warning about redundant "const" in wx/itemid.h (#23590).


3.2.3: (released 2023-10-10)
----------------------------

All:

- Fix wxTranslations::AddStdCatalog() and add AddAvailableCatalog() (#18227).
- Add move ctor and assignment operator to wxString (Pavel Tyunin, #23224).
- Enable large file support in Unix CMake builds (Maarten Bent, #22750).
- Make wxSocket::Peek() work with UDP too (Brian Nixon, #23594, #23604).
- Update Georgian translations (NorwayFun, #22673).
- Don't use invalid iterator in wxString in UTF-8 build (Ian Day, #23305).
- Fix wrong description for some languages (Ulrich Telle, #23419).
- Fix infinite loop in wxFTP::GetFilesList() (#23519).
- Fix memory leak when using wx from non-wx threads (Antti Nietosvaara, #23535).
- Use grep instead of fgrep and egrep in makefiles/scripts (#23537).
- Use /etc/os-release if lsb_release isn't available (Scott Talbert, #23712).
- Add wxUILocale::GetMonthName() and GetWeekDayName() (Ulrich Telle, #23556).
- Support WAV files with LIST chunks under Unix (A. Jiang, #23859).
- Fix CMake build if wxWidgets directory contained "++" (Maarten Bent, #22738).

All (GUI):

- Don't allow pasting characters forbidden by wxTextValidator (#10281).
- Fix wxFLEX_GROWMODE_ALL in wxFlexGridSizer with proportions (#23253).
- Make wxListCtrl checkboxes behaviour more consistent (Maarten Bent, #23869).
- Fix wxEditorDialogProperty in wxPropertyGrid (#23272).
- Fix entering dates in wxGenericDatePicker in nb_NO and other locales
  using names for the months in short date format (#23310).
- Fix wx-config output when using NanoSVG library (#23373).
- Fix bug modifying shared images in wxImage::Clear() (#23555).